finished main home content and overall home page done.

--- a/home/home.html
+++ b/home/home.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="home.css">
     <title>Home Page</title>
 </head>
@@ -37,14 +37,52 @@
             </div>
         </nav>
 
-        <section></section>
+        <section class="home">
+            <div class="home-content">
+                <h1>Welcome to General Business, Inc.</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dui nunc, convallis sit amet
+                    ultricies sit amet, lobortis cursus nibh. Sed malesuada vehicula est, ullamcorper pulvinar ipsum
+                    convallis sit amet. Phasellus in orci sapien. Nullam lobortis hendrerit enim sit amet pulvinar.
+                    Proin ac neque molestie, tristique leo id, consectetur urna. Curabitur egestas faucibus ante quis
+                    dapibus. Fusce auctor id turpis quis venenatis. Suspendisse id ligula laoreet, cursus tellus non,
+                    placerat lacus. Sed gravida purus elit, blandit commodo felis rhoncus vitae. Aliquam feugiat dui
+                    vitae est volutpat tincidunt. Maecenas aliquam nibh nec nulla iaculis eleifend. Aenean hendrerit,
+                    dolor ut auctor bibendum, orci lectus tincidunt eros, lobortis auctor quam erat non ipsum. Vivamus
+                    sit amet mauris ac justo pellentesque accumsan. Phasellus placerat consectetur justo ac semper.
+                    Maecenas sagittis lorem at eros posuere molestie. Sed elementum, sem ac auctor euismod, quam enim
+                    vestibulum lacus, vitae sagittis metus orci at tortor.</p>
+                <p>In eros nunc, consectetur sit amet turpis id, vehicula euismod purus. Mauris egestas justo id dolor
+                    volutpat, non semper neque imperdiet. Suspendisse sed sollicitudin neque, nec pellentesque nibh.
+                    Integer eget efficitur eros. Cras blandit ligula lacus, sit amet venenatis odio aliquet quis. Cras
+                    leo elit, mattis tincidunt rhoncus luctus, sollicitudin vehicula velit. Donec vestibulum quam tempus
+                    nulla elementum, a dictum nunc ullamcorper. Sed sed facilisis arcu. Fusce dictum malesuada lorem,
+                    sed porttitor magna finibus et. Donec ac massa in est lobortis tempor. Aliquam eu risus bibendum,
+                    porta nibh non, euismod libero.</p>
+                <p>Aliquam auctor erat eu augue ullamcorper, id molestie diam lobortis. Maecenas pulvinar posuere nunc,
+                    convallis tristique felis aliquam vel. Nullam placerat enim sit amet lorem gravida, non aliquam
+                    magna accumsan. Nullam non nibh quis purus aliquam consequat non vitae lectus. Sed vestibulum risus
+                    vitae metus ullamcorper dapibus in eu arcu. Pellentesque cursus elit sit amet dapibus suscipit. Nam
+                    ac lectus quis eros lacinia facilisis. Mauris suscipit, nisl vitae vulputate aliquet, felis lorem
+                    aliquet erat, eu suscipit leo nulla ut nisl. Vestibulum eu libero tempor, molestie eros non,
+                    lobortis nibh. Vestibulum facilisis vehicula tincidunt.</p>
+                <p>Quisque facilisis, lorem vitae efficitur ornare, purus neque rutrum sem, ut dapibus lorem nunc sed
+                    quam. Pellentesque tortor dui, scelerisque eget tempor quis, fermentum sed risus. Praesent fermentum
+                    dui eros, sit amet feugiat erat cursus in. Nunc pharetra mi vel nisl venenatis, eget commodo nibh
+                    elementum. Praesent feugiat convallis dolor, et ornare leo pharetra id. Nulla sit amet aliquam elit.
+                    Ut a luctus sem.</p>
+                <p>Morbi consectetur ac mi sed pulvinar. Curabitur imperdiet lectus a erat posuere aliquet. Curabitur
+                    vitae libero sit amet felis consectetur consequat pharetra id diam. Nullam at libero ligula. Fusce
+                    tempus laoreet dolor eget accumsan. Curabitur consequat porta urna, ac finibus tortor rhoncus sit
+                    amet. Fusce a massa libero. In lectus augue, mollis et nibh sit amet, aliquam consequat odio.</p>
+            </div>
+        </section>
 
-        <!-- <footer>
+        <footer>
             <div class="footer-content">
                 <p>2016 &copy General Business, Inc.</p>
                 <p>All Rights Reserved</p>
             </div>
-        </footer> -->
+        </footer>
 
     </div>
 </body>
