finished with site views/design/responsiveness on all 3 pages using html&css

--- a/home/home.html
+++ b/home/home.html
@@ -24,13 +24,13 @@
             </div>
             <div class="nav-links">
                 <ul class="nav-links-content">
-                    <a href="#">
+                    <a href="home.html">
                         <li>HOME</li>
                     </a>
-                    <a href="#">
+                    <a href="../about/about.html">
                         <li>ABOUT US</li>
                     </a>
-                    <a href="#">
+                    <a href="../staff/staff.html">
                         <li>STAFF</li>
                     </a>
                 </ul>
