changed header titles and readme

--- a/home/home.html
+++ b/home/home.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="home.css">
-    <title>Home Page</title>
+    <title>General Business, Inc. | Home Page</title>
 </head>
 
 <body>
