--- a/about/about.html
+++ b/about/about.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="about.css">
-    <title>About Us Page</title>
+    <title>General Business, Inc. | About Us Page</title>
 </head>
 
 <body>
