finshed 3 pages and made it so it can be deployed to github pages

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="index.css">
     <title>General Business, Inc. | About Us Page</title>
 </head>
 
@@ -18,19 +18,19 @@
         <nav>
             <div class="nav-info">
                 <div class="nav-info-content">
-                    <img src="../imgs/logos.png" alt="General Business Logo">
+                    <img src="./imgs/logos.png" alt="General Business Logo">
                     <p>(814) 555-1234</p>
                 </div>
             </div>
             <div class="nav-links">
                 <ul class="nav-links-content">
-                    <a href="../home/home.html">
+                    <a href="index.html">
                         <li>HOME</li>
                     </a>
                     <a href="about.html">
                         <li>ABOUT US</li>
                     </a>
-                    <a href="../staff/staff.html">
+                    <a href="staff.html">
                         <li>STAFF</li>
                     </a>
                 </ul>
@@ -57,7 +57,7 @@
                         Maecenas sagittis lorem at eros posuere molestie. Sed elementum, sem ac auctor euismod, quam
                         enim
                         vestibulum lacus, vitae sagittis metus orci at tortor.</p>
-                    <img src="../imgs/about-us-1.jpg" alt="Company Stock Photo 1">
+                    <img src="./imgs/about-us-1.jpg" alt="Company Stock Photo 1">
                 </div>
                 <p>In eros nunc, consectetur sit amet turpis id, vehicula euismod purus. Mauris egestas justo id dolor
                     volutpat, non semper neque imperdiet. Suspendisse sed sollicitudin neque, nec pellentesque nibh.
@@ -67,7 +67,7 @@
                     sed porttitor magna finibus et. Donec ac massa in est lobortis tempor. Aliquam eu risus bibendum,
                     porta nibh non, euismod libero.</p>
                 <div class="second-pic">
-                    <img src="../imgs/about-us-2.jpg" alt="Company Stock Photo 2">
+                    <img src="./imgs/about-us-2.jpg" alt="Company Stock Photo 2">
                     <div class="second-pic-content">
                         <p>Aliquam auctor erat eu augue ullamcorper, id molestie diam lobortis. Maecenas pulvinar
                             posuere
