--- a/staff.html
+++ b/staff.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="staff.css">
+    <link rel="stylesheet" href="index.css">
     <title>General Business, Inc. | Staff Page</title>
 </head>
 
@@ -18,16 +18,16 @@
         <nav>
             <div class="nav-info">
                 <div class="nav-info-content">
-                    <img src="../imgs/logos.png" alt="General Business Logo">
+                    <img src="./imgs/logos.png" alt="General Business Logo">
                     <p>(814) 555-1234</p>
                 </div>
             </div>
             <div class="nav-links">
                 <ul class="nav-links-content">
-                    <a href="../home/home.html">
+                    <a href="index.html">
                         <li>HOME</li>
                     </a>
-                    <a href="../about/about.html">
+                    <a href="about.html">
                         <li>ABOUT US</li>
                     </a>
                     <a href="staff.html">
@@ -44,42 +44,42 @@
 
                     <div class="staff-card">
                         <div class="staff-card-img">
-                            <img src="../imgs/staff-4.jpg" alt="Michael Doe">
+                            <img src="./imgs/staff-4.jpg" alt="Michael Doe">
                         </div>
                         <h1>Michael Doe</h1>
                         <p>(814) 555-1235</p>
                     </div>
                     <div class="staff-card">
                         <div class="staff-card-img">
-                            <img src="../imgs/staff-2.jpg" alt="Michael Doe">
+                            <img src="./imgs/staff-2.jpg" alt="Michael Doe">
                         </div>
                         <h1>Jane Doe</h1>
                         <p>(814) 555-1236</p>
                     </div>
                     <div class="staff-card">
                         <div class="staff-card-img">
-                            <img src="../imgs/staff-5.jpg" alt="Michael Doe">
+                            <img src="./imgs/staff-5.jpg" alt="Michael Doe">
                         </div>
                         <h1>John Doe</h1>
                         <p>(814) 555-1237</p>
                     </div>
                     <div class="staff-card">
                         <div class="staff-card-img">
-                            <img src="../imgs/staff-1.jpg" alt="Michael Doe">
+                            <img src="./imgs/staff-1.jpg" alt="Michael Doe">
                         </div>
                         <h1>Lesley Doe</h1>
                         <p>(814) 555-1238</p>
                     </div>
                     <div class="staff-card">
                         <div class="staff-card-img">
-                            <img src="../imgs/staff-3.jpg" alt="Michael Doe">
+                            <img src="./imgs/staff-3.jpg" alt="Michael Doe">
                         </div>
                         <h1>Paul Doe</h1>
                         <p>(814) 555-1239</p>
                     </div>
                     <div class="staff-card">
                         <div class="staff-card-img">
-                            <img src="../imgs/staff-6.jpg" alt="Michael Doe">
+                            <img src="./imgs/staff-6.jpg" alt="Michael Doe">
                         </div>
                         <h1>Henry Doe</h1>
                         <p>(814) 555-1240</p>
