--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="index.css">
     <title>General Business, Inc. | Home Page</title>
 </head>
 
@@ -18,19 +18,19 @@
         <nav>
             <div class="nav-info">
                 <div class="nav-info-content">
-                    <img src="../imgs/logos.png" alt="General Business Logo">
+                    <img src="./imgs/logos.png" alt="General Business Logo">
                     <p>(814) 555-1234</p>
                 </div>
             </div>
             <div class="nav-links">
                 <ul class="nav-links-content">
-                    <a href="home.html">
+                    <a href="index.html">
                         <li>HOME</li>
                     </a>
-                    <a href="../about/about.html">
+                    <a href="about.html">
                         <li>ABOUT US</li>
                     </a>
-                    <a href="../staff/staff.html">
+                    <a href="staff.html">
                         <li>STAFF</li>
                     </a>
                 </ul>
